force-app/main/default/objects/Choice__c/Choice__c.object-meta.xml
<CustomObject>
    <label>Choice</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>