force-app/main/default/objects/Choice__c/fields/LastVoteDate__c.field-meta.xml
<CustomField>
    <fullName>LastVoteDate__c</fullName>
    <label>LastVoteDate</label>
    <type>Date</type>
</CustomField>