force-app/main/default/objects/Choice__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Choices</relationshipLabel>
    <relationshipName>Choices</relationshipName>
    <type>Lookup</type>
</CustomField>